--- a/src/app/header/top-nav-bar2.component.html
+++ b/src/app/header/top-nav-bar2.component.html
@@ -1,3 +1,4 @@
+<!--NavBar2-->
 <nav class="p-1 navbar bg-white justify-content-center">
     <ul class="nav nav-tabs">
         <li class="nav-item">
