--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,12 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<app-top-nav-bar>Loading</app-top-nav-bar>
-<app-top-nav-bar2>Loading</app-top-nav-bar2>
-<app-top-nav-bar3>Loading</app-top-nav-bar3>
+<body>
+    <app-top-nav-bar>Loading</app-top-nav-bar>
+    <app-top-nav-bar2>Loading</app-top-nav-bar2>
+    <app-top-nav-bar3>Loading</app-top-nav-bar3>
+    <app-body-component1>Loading</app-body-component1>
+    <app-body-component2>Loading</app-body-component2>
+    <app-body-component3>Loading</app-body-component3>
+    <app-body-component4>Loading</app-body-component4>
+</body>
