--- a/src/app/BodyComponents/body-component2.html
+++ b/src/app/BodyComponents/body-component2.html
@@ -23,7 +23,7 @@
             <!---Username & gear-->
             <div class = "p-2">
                 <div style = "width:80%; display:inline-block;">
-                    <body class="astext">u/Username</body>
+                    <body class="astext">u/{{username}}</body>
                 </div> 
                 <div style = "width:20%; display:inline-block; text-align: end;"> 
                     <button type="button" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="blue" class="bi bi-gear" viewBox="0 0 16 16">
@@ -49,7 +49,7 @@
                     </ul>
                     <ul class="p-0 m-0">
                         <h6 class="p-0 m-0" style="font-size: small;">
-                            <img src="https://www.freeiconspng.com/uploads/flower-icon--icon-search-engine-4.png" alt="" width="10" height="10"> 1
+                            <img src="https://www.freeiconspng.com/uploads/flower-icon--icon-search-engine-4.png" alt="" width="10" height="10"> {{numberKarma}}
                             </h6>
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
                     <ul class="p-0 m-0">
                         <h6 class="p-0 m-0" style="font-size: small;">
                             <img src="https://www.freeiconspng.com/thumbs/birthday-icon/birthday-cake-icon-1.png" alt="" width="20" height="20"> 
-                            January 24, 2021
+                            {{cakeDay}}
                         </h6>
                     </ul>
                 </div>
