--- a/src/app/BodyComponents/body-component3.html
+++ b/src/app/BodyComponents/body-component3.html
@@ -7,7 +7,7 @@
         <div class="card" style="width: 19rem;">
             <!---Top Divider-->
             <div class="p-2 title">
-                Trophy Case (1)
+                Trophy Case ({{numberTrophies}})
             </div>
             <!---Bottom Divider-->
             <div class = "p-2">
