--- a/src/app/header/top-nav-bar.component.html
+++ b/src/app/header/top-nav-bar.component.html
@@ -22,7 +22,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-square" viewBox="0 0 16 16">
               <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
               <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12z"/>
-            </svg>&nbsp; u/Username
+            </svg>&nbsp; u/{{username}}
           </button>
             <ul class="dropdown-menu" aria-labeledby="dropDownMenuButton1" style="height:auto; width: 300px; max-height: 450px; overflow-x: auto" > 
               <li>
@@ -152,7 +152,7 @@
       <a class="pe-0 nav-link text-black" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
         <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
       </svg><span class="p-1 translate-middle badge rounded-pill bg-danger">
-        21
+        {{numNotifications}}
         <span class="visually-hidden">Notifications</span>
       </span></a>
     </li>
@@ -178,14 +178,14 @@
             data-bs-toggle="dropdown"
             aria-expanded="true"
             id="dropDownMenuButton1"
-            style="width: 190px; text-align: left;"
+            style="width: 180px; text-align: left;"
             >
             <span class="align-middle">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-square" viewBox="0 0 16 16">
               <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
               <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12z"/>
             </svg></span>
-            <div class="d-inline-block align-text-top"><li class="p-0"><span class="p-0"style="font-size: 75%">&nbsp;Username</span></li> <li><span style="font-size: 70%"><img src="https://www.freeiconspng.com/uploads/flower-icon--icon-search-engine-4.png" alt="" width="10" height="10">&nbsp;1 Karma</span></li></div>
+            <div class="d-inline-block align-text-top"><li class="p-0"><span class="p-0"style="font-size: 75%">&nbsp;{{username}}</span></li> <li><span style="font-size: 70%"><img src="https://www.freeiconspng.com/uploads/flower-icon--icon-search-engine-4.png" alt="" width="10" height="10">&nbsp;{{numberKarma}} Karma</span></li></div>
           </button>
 
             <ul class="dropdown-menu" aria-labeledby="dropDownMenuButton1" style="height:auto; width: 210px; max-height: 900px; overflow-x: auto"> 
