--- a/src/app/BodyComponents/body-component2.html
+++ b/src/app/BodyComponents/body-component2.html
@@ -1,90 +1,82 @@
 <!--Card With avatar-->
-<div>
-    <div class = "row">&nbsp;</div>
-    <div style="width:30%; display:inline-block;"></div>
-    <div style="width:30%; display:inline-block;"></div>
-    <div style="width:30%; display:inline-block;">
-        <div class="card" style="width: 19rem;">
-            <!---Top Divider w/pic, blue & camera button-->
-            <div class="p-3 bluebackground">
-                <div style = "width:80%; display:inline-block;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-person-square" viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                        <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12z"/>
-                    </svg>
-                </div>
-                <div style = "width:20%; display:inline-block; vertical-align: bottom; ">
-                    <button type="button" class="camerabutton"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera" viewBox="0 0 16 16">
-                        <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
-                        <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
-                      </svg></button>
-                </div>  
-            </div>
-            <!---Username & gear-->
-            <div class = "p-2">
-                <div style = "width:80%; display:inline-block;">
-                    <body class="astext">u/{{username}}</body>
-                </div> 
-                <div style = "width:20%; display:inline-block; text-align: end;"> 
-                    <button type="button" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="blue" class="bi bi-gear" viewBox="0 0 16 16">
-                        <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
-                        <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
-                      </svg></button>
-                </div>    
-            </div>
+<div class="card" style="width: 19rem;">
+   <!---Top Divider w/pic, blue & camera button-->
+    <div class="bluebackground">
+        <div style = "width:80%; display:inline-block;">          
+            <svg xmlns="http://www.w3.org/2000/svg" width="75" height="75" fill="currentColor" class="bi bi-person-square" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12z"/>
+            </svg>
+        </div>
+        <div style = "width:20%; display:inline-block; vertical-align: bottom; ">
+            <button type="button" class="camerabutton"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera" viewBox="0 0 16 16">
+                <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
+                <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+            </svg></button>
+        </div>  
+    </div>
+    <!---Username & gear-->
+    <div class = "p-2">
+        <div style = "width:80%; display:inline-block;">
+            <body class="astext">u/{{username}}</body>
+        </div> 
+        <div style = "width:20%; display:inline-block; text-align: end;"> 
+            <button type="button" class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="blue" class="bi bi-gear" viewBox="0 0 16 16">
+                <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
+                <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
+            </svg></button>
+        </div>    
+    </div>
             
             <!--Create Avatar button-->
-            <div class="nav nav-pills">
-                <li class="nav-item container-fluid" style="text-align: center;">
-                    <a class="nav-link active" aria-current="page" href="#"> 
-                       Create Avatar &nbsp;&nbsp;></a>
-                  </li>
-            </div>
+    <div class="nav nav-pills">
+        <li class="nav-item container-fluid" style="text-align: center;">
+            <a class="nav-link active" aria-current="page" href="#"> 
+                Create Avatar &nbsp;&nbsp;></a>
+        </li>
+    </div>
 
             <!--Karma & cake day-->
-            <div class = "p-2">
-                <div style="width:50%; display:inline-block;">
-                    <ul class="p-0 m-0">
-                        <body class="bstext">Karma</body>
-                    </ul>
-                    <ul class="p-0 m-0">
-                        <h6 class="p-0 m-0" style="font-size: small;">
-                            <img src="https://www.freeiconspng.com/uploads/flower-icon--icon-search-engine-4.png" alt="" width="10" height="10"> {{numberKarma}}
-                            </h6>
-                    </ul>
-                </div>
-                <div style="width:50%; display:inline-block;">
-                    <ul class="p-0 m-0">
-                        <body class="bstext">Cake Day</body>
-                    </ul>
-                    <ul class="p-0 m-0">
-                        <h6 class="p-0 m-0" style="font-size: small;">
-                            <img src="https://www.freeiconspng.com/thumbs/birthday-icon/birthday-cake-icon-1.png" alt="" width="20" height="20"> 
-                            {{cakeDay}}
-                        </h6>
-                    </ul>
-                </div>
-                
-            </div>
-
-            <!--New Post Button-->
-            <div class="nav nav-pills1">
-                <li class="nav-item container-fluid" style="text-align: center;">
-                    <a class="nav-link active" aria-current="page" href="#"> 
-                       New Post</a>
-                  </li>
-            </div>
-
-            <!--More Options-->
-            <div class="p-3 nav nav-pills2 justify-content-end">
-                <li class="nav-item;" style="text-align: center;">
-                    <a class="nav-link active" aria-current="page" href="#"> 
-                       More Options</a>
-                </li>
-            </div>
-
+    <div class = "p-2">
+        <div style="width:50%; display:inline-block;">
+            <ul class="p-0 m-0">
+                <body class="bstext">Karma</body>
+            </ul>
+            <ul class="p-0 m-0">
+                <h6 class="p-0 m-0" style="font-size: small;">
+                    <img src="https://www.freeiconspng.com/uploads/flower-icon--icon-search-engine-4.png" alt="" width="10" height="10"> {{numberKarma}}
+                    </h6>
+            </ul>
         </div>
+        <div style="width:50%; display:inline-block;">
+            <ul class="p-0 m-0">
+                <body class="bstext">Cake Day</body>
+            </ul>
+            <ul class="p-0 m-0">
+                <h6 class="p-0 m-0" style="font-size: small;">
+                    <img src="https://www.freeiconspng.com/thumbs/birthday-icon/birthday-cake-icon-1.png" alt="" width="20" height="20"> 
+                    {{cakeDay}}
+                </h6>
+            </ul>
+        </div>
+                
     </div>
-    <div style="width:25%; display:inline-block;">
+
+    <!--New Post Button-->
+    <div class="nav nav-pills1">
+        <li class="nav-item container-fluid" style="text-align: center;">
+            <a class="nav-link active" aria-current="page" href="#"> 
+                New Post
+            </a>
+        </li>
     </div>
+
+    <!--More Options-->
+    <div class="p-3 nav nav-pills2 justify-content-end">
+        <li class="nav-item;" style="text-align: center;">
+            <a class="nav-link active" aria-current="page" href="#"> 
+                More Options</a>
+        </li>
+    </div>
+
 </div>
