--- a/src/app/header/top-nav-bar2.component.html
+++ b/src/app/header/top-nav-bar2.component.html
@@ -2,31 +2,31 @@
 <nav class="p-1 navbar bg-white justify-content-center">
     <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active text-primary" href="#">OVERVIEW</a>
-        </li>
-        <li class="nav-item text-black">
-          <a class="nav-link text-black" href="#">POSTS</a>
+          <a class="nav-link " routerLinkActive="active" routerLink="home">OVERVIEW</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" href="#">COMMENTS</a>
+          <a class="nav-link " routerLinkActive="active" routerLink="user/Dreyintor55/posts">POSTS</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-black" href="#">SAVED</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/comments">COMMENTS</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/saved">SAVED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black" href="#">HIDDEN</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/hidden">HIDDEN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black" href="#">UPVOTED</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/upvoted">UPVOTED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black" href="#">DOWNVOTED</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/downvoted">DOWNVOTED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black" href="#">AWARDS RECIEVED</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/gilded">AWARDS RECIEVED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-black" href="#">AWARDS GIVEN</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="user/Dreyintor55/gilded/given">AWARDS GIVEN</a>
           </li>
         
       </ul>
