--- a/src/app/pages/saved/saved.component.html
+++ b/src/app/pages/saved/saved.component.html
@@ -1,19 +1,10 @@
 <div class = "row">&nbsp;</div>
-    <div style="width:25%; display:inline-block;">
-
+    <div style="width:1%; display:inline-block;"></div>
+    <div class="align-top" style="width:79%; display:inline-block;">
+        
     </div>
-
-    <div class="align-top" style="width:35%; display:inline-block;">
-        <app-body-component1>Loading</app-body-component1>
-    </div>    
-   
-    <div style="width:1%; display:inline-block;">
-        <div>
-            
-        </div>
-    </div>
-    
-    <div style="width:15%; display:inline-block;">
+    <div style="width:1%; display:inline-block;"></div>
+    <div style="width:19%; display:inline-block;">
         <app-body-component2>Loading</app-body-component2>
         <div class = "row">&nbsp;</div>
         <app-body-component3>Loading</app-body-component3>
