--- a/src/app/BodyComponents/body-component1.html
+++ b/src/app/BodyComponents/body-component1.html
@@ -1,5 +1,5 @@
 <!--NavBar New, Hot, Top-->
-<nav class="navbar navbar-light bg-light">
+<nav class="mb-2 navbar navbar-light bg-light">
   <form class="container-fluid justify-content-start">
     <ul class="nav nav-pills">
       <li class="nav-item">
