--- a/src/app/pages/posts/posts.component.html
+++ b/src/app/pages/posts/posts.component.html
@@ -1,1 +1,34 @@
-<app-layout-right></app-layout-right>
+<div class = "row">&nbsp;</div>
+    <div style="width:1%; display:inline-block;"></div>
+    <div class="align-top" style="width:79%; display:inline-block;">
+        <app-body-component1>Loading</app-body-component1>
+        <div *ngFor ="let posts of posts1">
+            <app-post-component 
+                title = {{posts.title}} 
+                imgPath = {{posts.imgPath}}
+                subreddit = {{posts.subreddit}}
+                poster = {{posts.poster}}
+                votes = {{posts.votes}}
+                daysago = {{posts.daysago}}
+                comments = {{posts.comments}}>
+            </app-post-component>
+        </div>
+    </div>
+    <div style="width:1%; display:inline-block;"></div>
+    <div style="width:19%; display:inline-block;">
+        <app-body-component2>Loading</app-body-component2>
+        <div class = "row">&nbsp;</div>
+        <app-body-component3>Loading</app-body-component3>
+        <div class = "row">&nbsp;</div>
+        <app-body-component4>Loading</app-body-component4>
+        <div class = "row">&nbsp;</div>
+        <div class="nav nav-pills1">
+            <li class="d-flex justify-content-center container-fluid nav-item" style="text-align: center;">
+                <a class="nav-link active" aria-current="page" href="#"> 
+                    Back To Top
+                </a>
+            </li>
+        </div>
+    </div>
+
+<div class = "row">&nbsp;</div>
