--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<reddit-user-info>Loading User info</reddit-user-info>
+
 <body>
     <app-layout-headers>Loading</app-layout-headers>
     <router-outlet></router-outlet>
