--- a/src/app/header/top-nav-bar.component.html
+++ b/src/app/header/top-nav-bar.component.html
@@ -158,7 +158,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="ps-0 nav-link text-white" href="#"><img src= "https://icons.veryicon.com/png/o/miscellaneous/standard-general-linear-icon/plus-60.png" alt="" width="20" height="20"></a>
+      <a class="ps-0 nav-link text-white" routerLinkActive="active" routerLink="user/Dreyintor55/createpost"><img src= "https://icons.veryicon.com/png/o/miscellaneous/standard-general-linear-icon/plus-60.png" alt="" width="20" height="20"></a>
     </li>
 
     <li class="nav-item">
